--- a/res/anim/fly_up_anim_out.xml
+++ b/res/anim/fly_up_anim_out.xml
@@ -1,4 +1,4 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-	<translate android:fromYDelta="+2%p" android:toYDelta="0"
+	<translate android:fromYDelta="0" android:toYDelta="-2%p"
             android:duration="250"/>
 </set>
