--- a/res/layout/dialog_content_sponsor.xml
+++ b/res/layout/dialog_content_sponsor.xml
@@ -178,6 +178,7 @@
                 android:gravity="center"
                 android:scaleType="center"
                 android:src="@drawable/ic_vk" />
+
         </RelativeLayout>
     </LinearLayout>
 
@@ -193,7 +194,7 @@
             android:layout_alignParentTop="true"
             android:background="@drawable/ic_dialog_btn"
             android:padding="5dp"
-            android:text="@string/later"
+            android:text="@string/ok"
             android:textColor="@color/intro_main_text"
             android:textSize="16sp" />
 
@@ -207,7 +208,9 @@
             android:padding="5dp"
             android:text="@string/no_thanks"
             android:textColor="@color/intro_main_text"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:visibility="gone" />
+
     </RelativeLayout>
 
 </LinearLayout>
