--- a/res/layout/fragment_content_show.xml
+++ b/res/layout/fragment_content_show.xml
@@ -5,25 +5,39 @@
     <uk.co.senab.actionbarpulltorefresh.extras.actionbarcompat.PullToRefreshLayout
         android:id="@+id/ptr_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/mainRtLt" >
+        android:layout_height="match_parent" >
 
         <ScrollView
             android:id="@+id/scrollview"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:paddingLeft="@dimen/fragment_standart_padding"
-            android:paddingRight="@dimen/fragment_standart_padding"
             android:scrollbarStyle="insideInset"
             android:visibility="invisible" >
 
-            <TextView
-                android:id="@+id/textContent"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/intro_main_text"
-                android:textSize="17sp" />
+                android:orientation="vertical" >
+
+                <TextView
+                    android:id="@+id/textContent"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="@dimen/fragment_standart_padding"
+                    android:paddingRight="@dimen/fragment_standart_padding"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="@color/intro_main_text"
+                    android:textSize="17sp" />
+
+                <LinearLayout
+                    android:id="@+id/mainRtLt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="45dp"
+                    android:gravity="center"
+                    android:orientation="vertical" >
+                </LinearLayout>
+            </LinearLayout>
         </ScrollView>
 
         <RelativeLayout
@@ -75,15 +89,5 @@
         android:layout_alignParentLeft="true"
         android:scaleType="fitXY"
         android:src="@drawable/ic_darkness_fade" />
-
-    <LinearLayout
-        android:id="@+id/mainRtLt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:orientation="vertical"
-        android:visibility="gone" >
-    </LinearLayout>
 
 </RelativeLayout>
