--- a/res/values-ru/h_strings.xml
+++ b/res/values-ru/h_strings.xml
@@ -116,6 +116,10 @@
     <string name="dialog_sponsor_vk_sumarry">На нашей странице ВК можно следить за последними обновлениями, либо задать вопрос разработчику.</string>
     <string name="dialog_sponsor_vk_link">https://vk.com/brothersrovers</string>
     
+    <string name="dialog_sponsor_inst">Посетите наш Инстаграм</string>
+    <string name="dialog_sponsor_inst_sumarry">На нашей странице Инстаграм можно следить за последними обновлениями, либо задать вопрос разработчику.</string>
+    <string name="dialog_sponsor_inst_link">https://www.instagram.com/dailyhoroscopefree/</string>
+    
     <string name="title_dialog_ad">Удалить рекламу</string>
     <string name="summary_dialog_ad">Удалить все виды рекламных объявлений за 99 руб.\nПомните, что купив однажды, реклама удалится навсегда.</string>
     <string name="i_want_to_buy">Я хочу купить</string>
