--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -4,10 +4,32 @@
     android:key="preference_screen" >
 
     <PreferenceCategory android:title="@string/preference_base" >
-        <Preference
+        <DatePreference
             android:id="@+id/preference_date_born"
             android:icon="@drawable/ic_icon_settings_date_born"
             android:key="preference_date_born"
             android:title="@string/preference_date_1" />
+        <Preference
+            android:id="@+id/preference_zodiac_sign"
+            android:icon="@drawable/ic_icon_settings_sign"
+            android:key="preference_zodiac_sign"
+            android:title="@string/preference_zodiac_sign_1" />
+        <Preference
+            android:id="@+id/preference_language"
+            android:icon="@drawable/ic_icon_settings_language"
+            android:key="preference_language"
+            android:title="@string/preference_language_1" />
+    </PreferenceCategory>
+    <PreferenceCategory android:title="@string/preference_notifications" >
+        <CheckBoxPreference
+            android:id="@+id/preference_show_notifications"
+            android:defaultValue="true"
+            android:key="preference_show_notifications"
+            android:title="@string/preference_show_notification_1"
+            android:widgetLayout="@layout/preference_widget_checkbox_custom" />
+        <TimePreference
+            android:id="@+id/preference_show_notifications_time"
+            android:key="preference_show_notifications_time"
+            android:title="@string/preference_time_1" />
     </PreferenceCategory>
 </PreferenceScreen>
