--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -2,5 +2,15 @@
 
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="fragment_content_text_padding">16dp</dimen>
+    
+    <dimen name="dialog_icon_padding">16dp</dimen>
+    <dimen name="dialog_horizontal_margin">10dp</dimen>
+    <dimen name="dialog_content_margin">5dp</dimen>
+    <dimen name="dialog_content_margin_whole">13dp</dimen>
+    <dimen name="dialog_content_margin_buttons">15dp</dimen>
+    <dimen name="dialog_content_margin_buttons_list">10dp</dimen>
+    <dimen name="dialog_content_margin_element">3dp</dimen>
+    <dimen name="dialog_content_margin_text_size_title">18sp</dimen>
+    <dimen name="dialog_content_margin_text_size_summary">15sp</dimen>
 
 </resources>
