--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -9,11 +9,11 @@
     
     <color name="action_bar_main_text_color">#fff</color>
     <color name="action_bar_summary_text_color">#fff</color>
-    <color name="action_bar_color">#092650</color>
+    <color name="action_bar_color">#0e1a2a</color>
     
     <color name="screen_window_background">#000</color>
     
-    <color name="dialog_window_background">#000f24</color>
+    <color name="dialog_window_background">#172841</color>
     <color name="dialog_title_text_color">#fff</color>
     
 </resources>
