--- a/res/layout/fragment_content.xml
+++ b/res/layout/fragment_content.xml
@@ -28,6 +28,46 @@
                     android:textSize="17sp" />
             </LinearLayout>
         </ScrollView>
+
+        <RelativeLayout
+            android:id="@+id/errorLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="@dimen/dialog_icon_padding"
+            android:visibility="gone" >
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:orientation="vertical" >
+
+                <TextView
+                    android:id="@+id/errorMessage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center"
+                    android:text="@string/error_message"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="@color/dialog_main_text_color"
+                    android:textSize="17sp" />
+
+                <Button
+                    android:id="@+id/errorRetryButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/button_custom"
+                    android:paddingLeft="30dp"
+                    android:layout_gravity="center_horizontal"
+                    android:paddingRight="30dp"
+                    android:text="@string/error_retry"
+                    android:textColor="@drawable/button_color_custom"
+                    android:textSize="@dimen/dialog_content_margin_text_size_title" />
+            </LinearLayout>
+        </RelativeLayout>
     </uk.co.senab.actionbarpulltorefresh.extras.actionbarcompat.PullToRefreshLayout>
 
     <ImageView
