--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -26,7 +26,7 @@
             android:defaultValue="true"
             android:key="preference_show_notifications"
             android:title="@string/preference_show_notification_1"
-            android:widgetLayout="@layout/preference_widget_checkbox_custom" />
+            android:widgetLayout="@layout/preference_widget_checkbox_custom" android:summary="@string/preference_show_notification_2"/>
         <TimePreference
             android:id="@+id/preference_show_notifications_time"
             android:key="preference_show_notifications_time"
