--- a/res/values/values_ENG_horoscope_com.xml
+++ b/res/values/values_ENG_horoscope_com.xml
@@ -31,4 +31,6 @@
         <item>aquarius</item>
         <item>pisces</item>
     </string-array>
+    
+    <string name="horoscope_com_copyright">© horoscope.com</string>
 </resources>
