--- a/res/layout/fragment_content.xml
+++ b/res/layout/fragment_content.xml
@@ -22,6 +22,8 @@
                 <TextView
                     android:id="@+id/textContent"
                     android:layout_width="match_parent"
+                    android:textColorLink="@color/content_link"
+                    android:textColor="@color/content_text"
                     android:layout_height="match_parent"
                     android:padding="@dimen/fragment_content_text_padding"
                     android:textAppearance="?android:attr/textAppearanceMedium"
