--- a/res/layout/activity_loader.xml
+++ b/res/layout/activity_loader.xml
@@ -54,4 +54,114 @@
             android:layout_centerHorizontal="true"
             android:scaleType="centerInside" />
     </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/mainIntroLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical"
+        android:paddingLeft="0dp"
+        android:paddingRight="0dp"
+        android:visibility="gone" >
+        
+                <TextView
+                    android:id="@+id/title_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="center"
+                    android:text="@string/app_name"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="@color/intro_main_text"
+                    android:textSize="30sp" />
+
+        <TextView
+            android:id="@+id/subTitle_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/title"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
+            android:text="@string/introduce_slogan"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@color/intro_second_text"
+            android:textSize="15sp" />
+
+        <Button
+            android:id="@+id/language"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="45dp"
+            android:layout_marginRight="45dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/button_custom_half"
+            android:drawableLeft="@drawable/ic_icon_settings_language"
+            android:ellipsize="end"
+            android:paddingLeft="8dp"
+            android:paddingRight="40dp"
+            android:singleLine="true"
+            android:text="@string/preference_language_1"
+            android:textColor="@color/intro_main_text"
+            android:textSize="@dimen/dialog_content_margin_text_size_title" />
+
+        <Button
+            android:id="@+id/date_born"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="45dp"
+            android:layout_marginRight="45dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/button_custom_half"
+            android:drawableLeft="@drawable/ic_icon_settings_date_born"
+            android:ellipsize="end"
+            android:paddingLeft="8dp"
+            android:paddingRight="40dp"
+            android:singleLine="true"
+            android:text="@string/preference_date_1"
+            android:textColor="@color/intro_main_text"
+            android:textSize="@dimen/dialog_content_margin_text_size_title" />
+
+        <Button
+            android:id="@+id/zodiac_sign"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="45dp"
+            android:layout_marginRight="45dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/button_custom_half"
+            android:drawableLeft="@drawable/ic_icon_settings_sign"
+            android:ellipsize="end"
+            android:paddingLeft="8dp"
+            android:paddingRight="40dp"
+            android:singleLine="true"
+            android:text="@string/preference_zodiac_sign_1"
+            android:textColor="@color/intro_main_text"
+            android:textSize="@dimen/dialog_content_margin_text_size_title" />
+
+        <Button
+            android:id="@+id/start"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:layout_marginLeft="45dp"
+            android:layout_marginRight="45dp"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/button_custom_half"
+            android:ellipsize="end"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
+            android:singleLine="true"
+            android:text="@string/start"
+            android:textColor="@color/intro_main_text"
+            android:textSize="@dimen/dialog_content_margin_text_size_title"
+            android:visibility="invisible" />
+
+    </LinearLayout>
+
 </RelativeLayout>
