--- a/res/values/values_ENG_horoscope_com.xml
+++ b/res/values/values_ENG_horoscope_com.xml
@@ -7,6 +7,7 @@
         <item>Weekly</item>
         <item>Monthly</item>
         <item>Year 2018</item>
+        <item>Chinese Year 2018</item>
     </string-array>
     <string-array name="horoscope_com_kinds">
     	<item>Sun sign</item>
@@ -30,6 +31,20 @@
         <item>capricorn</item>
         <item>aquarius</item>
         <item>pisces</item>
+    </string-array>
+    <string-array name="horoscope_com_yearly_zodiac_signs_chinese">
+        <item>rat</item>
+        <item>ox</item>
+        <item>tiger</item>
+        <item>rabbit</item>
+        <item>dragon</item>
+        <item>snake</item>
+        <item>horse</item>
+        <item>goat</item>
+        <item>monkey</item>
+        <item>rooster</item>
+        <item>dog</item>
+        <item>pig</item>
     </string-array>
     
     <string name="horoscope_com_copyright">© horoscope.com</string>
