--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -20,6 +20,18 @@
             android:key="preference_language"
             android:title="@string/preference_language_1" />
     </PreferenceCategory>
+    <PreferenceCategory android:title="@string/preference_appearance" >
+        <Preference
+            android:id="@+id/preference_text_size"
+            android:icon="@drawable/ic_icon_settings_text_size"
+            android:key="preference_text_size"
+            android:title="@string/preference_text_size" />
+        <Preference
+            android:id="@+id/preference_background_text_color"
+            android:icon="@drawable/ic_icon_settings_background_text_color"
+            android:key="preference_background_text_color"
+            android:title="@string/preference_background_text_color" />
+    </PreferenceCategory>
     <PreferenceCategory android:title="@string/preference_notifications" >
         <CheckBoxPreference
             android:id="@+id/preference_show_notifications"
