--- a/res/layout/activity_loader.xml
+++ b/res/layout/activity_loader.xml
@@ -64,19 +64,19 @@
         android:orientation="vertical"
         android:paddingLeft="0dp"
         android:paddingRight="0dp"
-        android:visibility="gone" >
-        
-                <TextView
-                    android:id="@+id/title_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:layout_gravity="center"
-                    android:text="@string/app_name"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textColor="@color/intro_main_text"
-                    android:textSize="30sp" />
+        android:visibility="visible" >
+
+        <TextView
+            android:id="@+id/title_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:text="@string/app_name"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/intro_main_text"
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/subTitle_2"
@@ -144,6 +144,26 @@
             android:textColor="@color/intro_main_text"
             android:textSize="@dimen/dialog_content_margin_text_size_title" />
 
+        <TextView
+            android:id="@+id/subTitle_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/title"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
+            android:layout_marginLeft="45dp"
+            android:layout_marginRight="45dp"
+            android:layout_marginTop="5dp"
+            android:ellipsize="end"
+            android:gravity="center_horizontal"
+            android:lines="3"
+            android:minLines="3"
+            android:text="@string/preference_date_set"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@color/intro_second_text"
+            android:textSize="15sp"
+            android:visibility="invisible" />
+
         <Button
             android:id="@+id/start"
             android:layout_width="match_parent"
@@ -151,7 +171,7 @@
             android:layout_marginBottom="30dp"
             android:layout_marginLeft="45dp"
             android:layout_marginRight="45dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/button_custom_half"
             android:ellipsize="end"
             android:paddingLeft="40dp"
@@ -161,7 +181,6 @@
             android:textColor="@color/intro_main_text"
             android:textSize="@dimen/dialog_content_margin_text_size_title"
             android:visibility="invisible" />
-
     </LinearLayout>
 
 </RelativeLayout>
