opti for tablets and landscape mode

--- a/res/layout/activity_loader.xml
+++ b/res/layout/activity_loader.xml
@@ -64,7 +64,7 @@
         android:orientation="vertical"
         android:paddingLeft="0dp"
         android:paddingRight="0dp"
-        android:visibility="visible" >
+        android:visibility="gone" >
 
         <TextView
             android:id="@+id/title_2"
@@ -95,8 +95,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="45dp"
-            android:layout_marginRight="45dp"
+            android:layout_marginLeft="@dimen/loader_buttons_margin"
+            android:layout_marginRight="@dimen/loader_buttons_margin"
             android:layout_marginTop="30dp"
             android:background="@drawable/button_custom_half"
             android:drawableLeft="@drawable/ic_icon_settings_language"
@@ -113,8 +113,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="45dp"
-            android:layout_marginRight="45dp"
+            android:layout_marginLeft="@dimen/loader_buttons_margin"
+            android:layout_marginRight="@dimen/loader_buttons_margin"
             android:layout_marginTop="20dp"
             android:background="@drawable/button_custom_half"
             android:drawableLeft="@drawable/ic_icon_settings_date_born"
@@ -131,8 +131,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="45dp"
-            android:layout_marginRight="45dp"
+            android:layout_marginLeft="@dimen/loader_buttons_margin"
+            android:layout_marginRight="@dimen/loader_buttons_margin"
             android:layout_marginTop="20dp"
             android:background="@drawable/button_custom_half"
             android:drawableLeft="@drawable/ic_icon_settings_sign"
@@ -151,8 +151,8 @@
             android:layout_below="@+id/title"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
-            android:layout_marginLeft="45dp"
-            android:layout_marginRight="45dp"
+            android:layout_marginLeft="@dimen/loader_buttons_margin"
+            android:layout_marginRight="@dimen/loader_buttons_margin"
             android:layout_marginTop="5dp"
             android:ellipsize="end"
             android:gravity="center_horizontal"
@@ -169,8 +169,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
-            android:layout_marginLeft="45dp"
-            android:layout_marginRight="45dp"
+            android:layout_marginLeft="@dimen/loader_buttons_margin"
+            android:layout_marginRight="@dimen/loader_buttons_margin"
             android:layout_marginTop="20dp"
             android:background="@drawable/button_custom_half"
             android:ellipsize="end"
