--- a/res/layout/dialog_content_advertisement.xml
+++ b/res/layout/dialog_content_advertisement.xml
@@ -50,57 +50,6 @@
                 android:orientation="vertical" >
 
                 <RelativeLayout
-                    android:id="@+id/make_toggle_intestitials"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dialog_content_margin_element"
-                    android:background="@drawable/slider_menu_selector" >
-
-                    <TextView
-                        android:id="@+id/TextView05"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_toLeftOf="@+id/TextView06"
-                        android:ellipsize="end"
-                        android:lines="1"
-                        android:paddingLeft="@dimen/dialog_horizontal_margin"
-                        android:paddingRight="@dimen/dialog_horizontal_margin"
-                        android:paddingTop="@dimen/dialog_horizontal_margin"
-                        android:singleLine="true"
-                        android:text="@string/advertisement_interstitials"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textColor="@color/dialog_main_text_color"
-                        android:textSize="@dimen/dialog_content_margin_text_size_title" />
-
-                    <TextView
-                        android:id="@+id/TextView04"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignLeft="@+id/TextView05"
-                        android:layout_below="@+id/TextView05"
-                        android:layout_toLeftOf="@+id/TextView06"
-                        android:paddingBottom="@dimen/dialog_horizontal_margin"
-                        android:paddingLeft="@dimen/dialog_horizontal_margin"
-                        android:paddingRight="@dimen/dialog_horizontal_margin"
-                        android:text="@string/advertisement_interstitials_summary"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textColor="@color/dialog_summary_text_color"
-                        android:textColorHint="@color/dialog_summary_text_color"
-                        android:textColorLink="@color/dialog_summary_text_color"
-                        android:textSize="@dimen/dialog_content_margin_text_size_summary" />
-
-                    <CheckBox
-                        android:id="@+id/TextView06"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:layout_alignBottom="@+id/TextView04"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentTop="true"
-                        android:checked="true"
-                        android:gravity="center" />
-                </RelativeLayout>
-
-                <RelativeLayout
                     android:id="@+id/make_buy_no_ad"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -118,7 +67,7 @@
                         android:paddingRight="@dimen/dialog_horizontal_margin"
                         android:paddingTop="@dimen/dialog_horizontal_margin"
                         android:singleLine="true"
-                        android:text="@string/advertisement_banners"
+                        android:text="@string/advertisement_interstitials"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="@color/dialog_main_text_color"
                         android:textSize="@dimen/dialog_content_margin_text_size_title" />
@@ -133,7 +82,7 @@
                         android:paddingBottom="@dimen/dialog_horizontal_margin"
                         android:paddingLeft="@dimen/dialog_horizontal_margin"
                         android:paddingRight="@dimen/dialog_horizontal_margin"
-                        android:text="@string/advertisement_banners_summary"
+                        android:text="@string/advertisement_interstitials_summary"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="@color/dialog_summary_text_color"
                         android:textColorHint="@color/dialog_summary_text_color"
@@ -170,7 +119,7 @@
                 android:background="@drawable/button_custom"
                 android:paddingLeft="30dp"
                 android:paddingRight="30dp"
-                android:text="@string/ok"
+                android:text="@string/cancel"
                 android:textColor="@drawable/button_color_custom"
                 android:textSize="@dimen/dialog_content_margin_text_size_title" />
 
@@ -186,7 +135,9 @@
                 android:paddingRight="30dp"
                 android:text="@string/cancel"
                 android:textColor="@drawable/button_color_custom"
-                android:textSize="@dimen/dialog_content_margin_text_size_title" />
+                android:textSize="@dimen/dialog_content_margin_text_size_title"
+                android:visibility="gone" />
+
         </RelativeLayout>
     </LinearLayout>
 
