--- a/res/layout/fragment_content.xml
+++ b/res/layout/fragment_content.xml
@@ -62,9 +62,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:background="@drawable/button_custom"
-                    android:paddingLeft="30dp"
+                    android:paddingLeft="@dimen/content_fragment_error_button_padding"
                     android:layout_gravity="center_horizontal"
-                    android:paddingRight="30dp"
+                    android:paddingRight="@dimen/content_fragment_error_button_padding"
                     android:text="@string/error_retry"
                     android:textColor="@drawable/button_color_custom"
                     android:textSize="@dimen/dialog_content_margin_text_size_title" />
