--- a/res/values/values_RUS_lady_mail_ru.xml
+++ b/res/values/values_RUS_lady_mail_ru.xml
@@ -7,6 +7,7 @@
         <item>Неделя</item>
         <item>Месяц</item>
         <item>Год</item>
+        <item>Совместимость</item>
     </string-array>
     <string-array name="mail_ru_to_load_zodiac_signs">
         <item>aries</item>
